fix code blocks on mobile & move some parts from CSS to JS

--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -14,7 +14,6 @@ a.button {
   padding: 8px 18px;
   text-decoration: none;
   text-align: center;
-  border-radius: 8;
   font: inherit;
   font-weight: bold;
   appearance: none;
@@ -41,13 +40,13 @@ button.link,
 .button.link,
 a.button.link {
   background: none;
-  font-size: 1rem;
+  font-size: var(--font-size);
 }
 
 button.small,
 .button.small,
 a.button.small {
-  font-size: 0.8rem;
+  font-size: calc(var(--font-size) * 0.8);
 }
 
 button.wide,
@@ -82,21 +81,4 @@ a.read-more:active {
   padding: 0;
   max-width: 100%;
   text-decoration: none;
-}
-
-.copy-button {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 3px 8px;
-  margin-bottom: 5px;
-  text-decoration: none;
-  text-align: center;
-  font-size: 13px;
-  font-weight: 500;
-  border: 1px solid color-mix(in srgb, var(--accent) 15%, transparent);
-  appearance: none;
-  cursor: pointer;
-  outline: none;
 }
