--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -21,7 +21,6 @@
   flex-flow: row wrap;
   flex: 1;
   align-items: center;
-  font-size: 1rem;
   justify-content: center;
 }
 
